--- a/docker-compose-demo/docker-compose.yml
+++ b/docker-compose-demo/docker-compose.yml
@@ -24,8 +24,12 @@ services:
       WORDPRESS_DB_USER: ${MYSQL_USER}
       WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
       WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
+
     volumes:
-      - wordpress_data:/var/www/html
+      - type: bind
+        source: ./wordpress_data
+        target: /var/www/html
+    working_dir: /var/www/html
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -39,8 +43,7 @@ services:
       - db
 
 volumes:
-  db_data: {}
-  wordpress_data: {}
+  db_data: 
 
 networks:
   default:
